# custom-spin-templates

templates/http-rust-thns/content/: Cargo.toml
templates/http-rust-thns/content/src/: api_models.rs  handlers.rs  lib.rs
templates/http-rust-thns/metadata/: spin-template.toml
templates/http-rust-thns/metadata/snippets/: component.txt
